--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="col-sm-6 sm-margin-b-60">
                         <div class="margin-b-30">
                             <h1 class="promo-block-title">Nate <br/> Villegas</h1>
-                            <p class="promo-block-text">Full Stack Web Development | Media Production | Project Management</p>
+                            <p class="promo-block-text">Full Stack Web Development | Media Production | Program and Project Management</p>
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://www.linkedin.com/in/nathanielvillegas/" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
@@ -106,18 +106,18 @@
                             <div class="margin-b-50">
                                 <div class="margin-b-30">
                                     <h2>About Me</h2>
-                                    <p>Currently at Twitter as a Project Manager working between our Legal, Trust & Safety, and Engineering orgs to develop and maintain policy and legal compliance internal tools. Also a co-founder of Sugar & Spun—a nationally distributed gourmet cotton candy business where I focus on design, content production, and marketing. Videography is a hobby of mine and I plan to produce a series mini documentaries to capture people’s stories and passions.</p>
+                                    <p>Currently at Twitter as a Program Manager working between our Legal, Trust & Safety, and Engineering orgs to develop and maintain policy and legal compliance internal tools. Also a co-founder of Sugar & Spun—a nationally distributed gourmet cotton candy business where I focus on design, content production, and marketing. Videography is a hobby of mine and I plan to produce a series mini documentaries to capture people’s stories and passions.</p>
                                 </div>
                                 <div>
                                     <h2>Professional Experience</h2>
                                     <details>
                                         <summary>Twitter, San Francisco, CA <i>(2012 - Present)</i></summary>
-                                        Project Manager II, Trust Strategy & Analytics <i>(Apr 2016 - Present)</i>
+                                        Program, Trust Strategy & Analytics <i>(Apr 2016 - Present)</i>
                                         <ul>
                                             <li>Develop Legal and Trust & Safety’s (T&S) tooling roadmap, manage prioritization of engineering tasks on a quarterly and sprint basis, forecast future needs or requests based on policy and Product changes.</li>
-                                            <li>Own the project planning, product requirement specifications, feature development, feature testing bug triage, and user documentation of 13 agent tools used by T&S and customer support teams globally.</li>
-                                            <li>Liaison cross-functionally between T&S policy, Legal, Communications, Support, and T&S, Periscope, and Salesforce engineering stakeholders to ensure tools and processes mitigate legal risk and protect users.</li>
-                                            <li>Coordinate and drive design, development, and launch of 4 transparency reports that included a revamp, migration between content management systems (CMS), and multiple additions of new policies reported.</li>
+                                            <li>Lead the project planning, product requirement specifications, feature development, feature testing bug triage, and user documentation of 13 agent tools used by T&S and customer support teams globally.</li>
+                                            <li>Advocate cross-functionally between T&S policy, Legal, Communications, Support, and T&S, Periscope, and Salesforce engineering stakeholders to ensure tools and processes mitigate legal risk and protect users.</li>
+                                            <li>Product manage the drive design, development, and launch of 4 transparency reports that included a revamp, migration between content management systems (CMS), and multiple additions of new policies reported.</li>
                                             <li>Manage and mentor interns and peers on issues tied to project, time, and priority management, communication and project visibility, and the operational and tooling development lifecycle.</li>
                                         </ul>
                                         Project Manager, Intellectual Property & Identity <i>(Oct 2013 - Apr 2016)</i>
