--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                     <h2>Professional Experience</h2>
                                     <details>
                                         <summary>Twitter, San Francisco, CA <i>(2012 - Present)</i></summary>
-                                        Program, Trust Strategy & Analytics <i>(Apr 2016 - Present)</i>
+                                        Program Manager, Trust Strategy & Analytics <i>(Apr 2016 - Present)</i>
                                         <ul>
                                             <li>Develop Legal and Trust & Safety’s (T&S) tooling roadmap, manage prioritization of engineering tasks on a quarterly and sprint basis, forecast future needs or requests based on policy and Product changes.</li>
                                             <li>Lead the project planning, product requirement specifications, feature development, feature testing bug triage, and user documentation of 13 agent tools used by T&S and customer support teams globally.</li>
