--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="col-sm-6 sm-margin-b-60">
                         <div class="margin-b-30">
                             <h1 class="promo-block-title">Nate <br/> Villegas</h1>
-                            <p class="promo-block-text">Full Stack Web Development | Media Production | Program and Project Management</p>
+                            <p class="promo-block-text">Full Stack Web Development | Media Production | Product Management</p>
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://www.linkedin.com/in/nathanielvillegas/" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
@@ -106,13 +106,17 @@
                             <div class="margin-b-50">
                                 <div class="margin-b-30">
                                     <h2>About Me</h2>
-                                    <p>Currently at Twitter as a Program Manager working between our Legal, Trust & Safety, and Engineering orgs to develop and maintain policy and legal compliance internal tools. Also a co-founder of Sugar & Spun—a nationally distributed gourmet cotton candy business where I focus on design, content production, and marketing. Videography is a hobby of mine and I plan to produce a series mini documentaries to capture people’s stories and passions.</p>
+                                    <p>Currently at Twitter as a System & Tools Product Manager working between our Twitter Service and Engineering orgs to develop and maintain policy and legal compliance internal tools. Also a co-founder of Sugar & Spun—a nationally distributed gourmet cotton candy business where I focus on design, content production, and marketing. Videography is a hobby of mine and I plan to produce a series mini documentaries to capture people’s stories and passions.</p>
                                 </div>
                                 <div>
                                     <h2>Professional Experience</h2>
                                     <details>
                                         <summary>Twitter, San Francisco, CA <i>(2012 - Present)</i></summary>
-                                        Program Manager, Trust Strategy & Analytics <i>(Apr 2016 - Present)</i>
+                                        Product Manager, System & Tools, Twitter Service <i>(Apr 2016 - Dec 2018)</i>
+                                        <ul>
+                                            <li>Manage the requirements, roadmap, and MVP rollout of Twitter's primary admin tool used by ~1,500 users.</li>
+                                        </ul>
+                                        Program Manager, Trust Strategy & Analytics <i>(Apr 2016 - Dec 2018)</i>
                                         <ul>
                                             <li>Develop Legal and Trust & Safety’s (T&S) tooling roadmap, manage prioritization of engineering tasks on a quarterly and sprint basis, forecast future needs or requests based on policy and Product changes.</li>
                                             <li>Lead the project planning, product requirement specifications, feature development, feature testing bug triage, and user documentation of 13 agent tools used by T&S and customer support teams globally.</li>
