--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="col-sm-6 sm-margin-b-60">
                         <div class="margin-b-30">
                             <h1 class="promo-block-title">Nate <br/> Villegas</h1>
-                            <p class="promo-block-text">Full Stack Web Development | Media Production | Product Management</p>
+                            <p class="promo-block-text">Product Management | Media Production | Full Stack Web Development</p>
                         </div>
                         <ul class="list-inline">
                             <li><a href="https://www.linkedin.com/in/nathanielvillegas/" class="social-icons"><i class="icon-social-linkedin"></i></a></li>
